RESOLVED FIXED112490
Reflected video elements hit assertion
https://bugs.webkit.org/show_bug.cgi?id=112490
Summary Reflected video elements hit assertion
Simon Fraser (smfr)
Reported 2013-03-15 21:47:05 PDT
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x000000010d30b705 WebCore::RenderLayerCompositor::flushPendingLayerChanges(bool) + 229 (RenderLayerCompositor.cpp:342) 1 com.apple.WebCore 0x000000010c5add9f WebCore::FrameView::flushCompositingStateForThisFrame(WebCore::Frame*) + 255 (FrameView.cpp:908) 2 com.apple.WebCore 0x000000010c5b80e5 WebCore::FrameView::paintContents(WebCore::GraphicsContext*, WebCore::IntRect const&) + 741 (FrameView.cpp:3399) 3 com.apple.WebCore 0x000000010d556d89 WebCore::ScrollView::paint(WebCore::GraphicsContext*, WebCore::IntRect const&) + 777 (ScrollView.cpp:1081) 4 com.apple.WebKit2 0x0000000109bcfd34 WebKit::WebPage::drawRect(WebCore::GraphicsContext&, WebCore::IntRect const&) + 292 (WebPage.cpp:1108) 5 com.apple.WebKit2 0x00000001099ca3a8 WebKit::LayerTreeHostMac::paintContents(WebCore::GraphicsLayer const*, WebCore::GraphicsContext&, unsigned int, WebCore::IntRect const&) + 88 (LayerTreeHostMac.mm:254) 6 com.apple.WebKit2 0x00000001099ca435 non-virtual thunk to WebKit::LayerTreeHostMac::paintContents(WebCore::GraphicsLayer const*, WebCore::GraphicsContext&, unsigned int, WebCore::IntRect const&) + 69 7 com.apple.WebCore 0x000000010c685926 WebCore::GraphicsLayer::paintGraphicsLayerContents(WebCore::GraphicsContext&, WebCore::IntRect const&) + 294 (GraphicsLayer.cpp:328) 8 com.apple.WebCore 0x000000010c693460 WebCore::GraphicsLayerCA::platformCALayerPaintContents(WebCore::GraphicsContext&, WebCore::IntRect const&) + 48 (GraphicsLayerCA.cpp:1059) 9 com.apple.WebCore 0x000000010c6934a7 non-virtual thunk to WebCore::GraphicsLayerCA::platformCALayerPaintContents(WebCore::GraphicsContext&, WebCore::IntRect const&) + 55 10 com.apple.WebCore 0x000000010d92b700 drawLayerContents(CGContext*, CALayer*, WebCore::PlatformCALayer*) + 1744 (WebLayer.mm:116) 11 com.apple.WebCore 0x000000010d92c5e6 -[WebLayer drawInContext:] + 70 (WebLayer.mm:233) 12 com.apple.QuartzCore 0x00007fff8f1e7225 CABackingStoreUpdate_ + 3221 13 com.apple.QuartzCore 0x00007fff8f1e613a CA::Layer::display_() + 1086 14 com.apple.WebCore 0x000000010d92c536 -[WebLayer display] + 54 (WebLayer.mm:223) 15 com.apple.QuartzCore 0x00007fff8f1de00a CA::Layer::display_if_needed(CA::Transaction*) + 560 16 com.apple.QuartzCore 0x00007fff8f1dcfbf CA::Context::commit_transaction(CA::Transaction*) + 319 17 com.apple.QuartzCore 0x00007fff8f1dcd3c CA::Transaction::commit() + 274 18 com.apple.MediaToolbox 0x00007fff8f3990e3 0x7fff8f34d000 + 311523 19 com.apple.MediaToolbox 0x00007fff8f399945 0x7fff8f34d000 + 313669 20 com.apple.MediaToolbox 0x00007fff8f399d60 0x7fff8f34d000 + 314720 21 com.apple.MediaToolbox 0x00007fff8f399e62 0x7fff8f34d000 + 314978 22 com.apple.MediaToolbox 0x00007fff8f38e79a 0x7fff8f34d000 + 268186 23 com.apple.MediaToolbox 0x00007fff8f38d057 0x7fff8f34d000 + 262231 24 com.apple.avfoundation 0x00007fff9441ae2f -[AVPlayerLayer _updateContentLayerConnectionToPlayer] + 187 25 com.apple.avfoundation 0x00007fff94419e76 -[AVPlayerLayer setPlayer:] + 442 26 com.apple.WebCore 0x000000010d145642 WebCore::PlatformCALayer::clone(WebCore::PlatformCALayerClient*) const + 1202 (PlatformCALayerMac.mm:277) 27 com.apple.WebCore 0x000000010c69c7a3 WebCore::GraphicsLayerCA::cloneLayer(WebCore::PlatformCALayer*, WebCore::GraphicsLayerCA::CloneLevel) + 67 (GraphicsLayerCA.cpp:2892) 28 com.apple.WebCore 0x000000010c69c675 WebCore::GraphicsLayerCA::findOrMakeClone(WTF::String, WebCore::PlatformCALayer*, WTF::HashMap<WTF::String, WTF::RefPtr<WebCore::PlatformCALayer>, WTF::StringHash, WTF::HashTraits<WTF::String>, WTF::HashTraits<WTF::RefPtr<WebCore::PlatformCALayer> > >*, WebCore::GraphicsLayerCA::CloneLevel) + 261 (GraphicsLayerCA.cpp:2740) 29 com.apple.WebCore 0x000000010c69cc34 WebCore::GraphicsLayerCA::ensureCloneLayers(WTF::String, WTF::RefPtr<WebCore::PlatformCALayer>&, WTF::RefPtr<WebCore::PlatformCALayer>&, WTF::RefPtr<WebCore::PlatformCALayer>&, WebCore::GraphicsLayerCA::CloneLevel) + 916 (GraphicsLayerCA.cpp:2766) 30 com.apple.WebCore 0x000000010c698392 WebCore::GraphicsLayerCA::fetchCloneLayers(WebCore::GraphicsLayer*, WebCore::GraphicsLayerCA::ReplicaState&, WebCore::GraphicsLayerCA::CloneLevel) + 130 (GraphicsLayerCA.cpp:2804) 31 com.apple.WebCore 0x000000010c69816b WebCore::GraphicsLayerCA::replicatedLayerRoot(WebCore::GraphicsLayerCA::ReplicaState&) + 187 (GraphicsLayerCA.cpp:1783)
Attachments
Simon Fraser (smfr)
Comment 1 2013-03-15 21:59:38 PDT
Workaround landed in https://trac.webkit.org/r145983. On Lion video will reflect, but the reflection won't play.
Simon Fraser (smfr)
Comment 3 2013-03-16 12:34:47 PDT
I disabled setting the player on the playerLayer clone in http://trac.webkit.org/changeset/146001
Note You need to log in before you can comment on or make changes to this bug.