Reflected video elements hit assertion on Lion https://bugs.webkit.org/show_bug.cgi?id=112490

Disable the new reflected video functionality added in r145915
on Lion because of a nasty re-entrancy problem. Tracked by bug 112490.

* platform/graphics/ca/mac/PlatformCALayerMac.mm:
(PlatformCALayer::clone):

Canonical link: https://commits.webkit.org/130805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145983 268f45cc-cd09-0410-ab3c-d52691b4dbfc